--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,5 @@ steps:
 - script: |
     npm install
     npm run build
-    cp build /home/crglick
+    cp -r build /home/crglick
   displayName: 'npm install and build'
