--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-multi-email": "^0.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
